<resources>
    <string name="app_name">AltynOrda</string>
    <string name="action_settings">Settings</string>

    <!--для navigation drawer-->
    <string name="drawer_item_home">Домашнаяя</string>
    <string name="drawer_item_agents_agent">Список агентов и агенств</string>
    <string name="drawer_item_custom">Список недвижимостей</string>
    <string name="drawer_item_settings">Опции</string>
    <string name="drawer_item_help">Поиск</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_login">Логин</string>
    <string name="title_activity_list_agent">ListAgent</string>
    <string name="title_activity_one_card">OneCard</string>
    <string name="title_activity_agents_agencies">AgentsAgenciesActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_agencies">AgenciesActivity</string>



    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">ВХОД</string>
    <string name="btn_register">РЕГИСТРАЦИЯ</string>
    <string name="btn_link_to_register">Зарегистрироваться сейчас!</string>
    <string name="btn_link_to_login"><u>Уже зарегистрированы! Нажмите чтоб войти.</u></string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hint_login">Login: 7XXXXXXXXX</string>
    <string name="btn_link_to_forget"> <u> Забыли пароль? </u></string>
    <string name="title_activity_tlistings">TListingsActivity</string>
    <string name="title_activity_inside_agency">InsideAgencyActivity</string>
    <string name="phone_confirmation">Код подтверждения</string>
    <string name="btn_send_phone_confirmation">Отправить</string>
    <string name="btn_send_again">Прислать код еще раз</string>
    <string name="numberForgotPassword">Номер 7XXXXXXXXX</string>
    <string name="new_password">Новый пароль</string>
    <string name="btn_change_psw">Изменить пароль</string>
    <string name="old_password">Старый пароль</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rent">Аренда</string>
    <string name="sale">Продажа</string>
    <string name="search">Поиск</string>
    <string name="tenge">₸</string>
    <string name="dollar">$</string>
    <string name="euro">€</string>

</resources>
